# audio_device_ai

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/noise_reduceer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: dummy_model.onnx
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/onnxruntime/headers/: onnxruntime_cxx_api.h  onnxruntime_cxx_inline.h
app/src/main/java/com/example/noise_reduceer/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/noise_reduceer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
